# software-poi

./: .gitattributes  .gitignore  PathLLM_to_Next_POI_Recommendation_Notes.md  README.md  protocol.md  pyproject.toml
.claude/: settings.local.json
.clinerules/: long-running-training.md  remote-server-command-execution.md
configs/: debug.yaml  nyc_4090.yaml  nyc_dynamic_candidates.yaml  nyc_mvp.yaml  nyc_optim_priors.yaml  nyc_optim_v2.yaml  nyc_p0_optim.yaml  nyc_profile_llm.yaml  nyc_small_candidate_reranker.yaml  paper_nyc.yaml  paper_tky.yaml
data/: dataset_TSMC2014_TKY.txt
latex/: README.md  baseline.md  paper.aux  paper.bbl  paper.bcf  paper.blg  paper.fdb_latexmk  paper.fls  paper.run.xml  paper.tex  paper.xdv  references.bib  rjthesis.cls
latex/figure/: frameword - 副本(1).pptx
latex/python/: generate_placeholder_figures.py
latex/scripts/: plot_cost_aware_candidate_pool.py  plot_embedding_tsne.py  plot_nyc_gate_context.py  plot_sensitivity_optimized_v4.py
latex/参考材料/: CoMaPOI_ablation.md  POI推荐完整方法思路与公式.md  can_re.md  draw.md  (+6 more)
poi_rec/: __init__.py
scripts/: analyze_checkpoint.py  evaluate.py  generate_experiment_figures.py  generate_framework_figure.py  generate_real_figures.py  paired_bootstrap.py  preprocess.py  pretrain_alignment.py  quick_dataset_stats.py  run_ablation_suite.sh  run_baseline.py  run_prior_ablation.sh  summarize_paper_results.py  train.py  train_reranker.py  tune_priors.py
tests/: test_alignment_checkpoint.py  test_config.py  test_metrics.py  test_model_forward.py  test_paper_baselines.py  test_preprocess_dataset.py
(+35 files in other folders)
