[project]
name = "software-poi"
version = "0.2.0"
description = "Path-LLM-inspired next POI recommendation prototype"
requires-python = ">=3.11,<3.13"
dependencies = [
  "torch>=2.4",
  "transformers>=4.40",
  "pandas>=2.0",
  "numpy>=1.26",
  "scikit-learn>=1.3",
  "networkx>=3.6",
  "node2vec>=0.5",
  "gensim>=4.4",
  "pyyaml>=6.0",
  "tqdm>=4.67",
  "safetensors>=0.8",
  "tokenizers>=0.22",
]

[tool.setuptools.packages.find]
include = ["poi_rec*"]
